<resources>
    <string name="app_name">splitapp</string>
    <string name="reg_request">Please Register</string>
    <string name="name_request">Enter Your Name</string>
    <string name="email_request">Enter Your Email</string>
    <string name="pass_request">Enter Password</string>
    <string name="confirm_pass_request">Confirm password</string>
    <string name="mobile_request">Enter Your Mobile Number</string>
    <string name="login_button">Login</string>
    <string name="SwitchToRegister">New to SplitApp? Register here.</string>
    <string name="switchToLogin">Already have an Account? Login.</string>
    <string name="reg_confirm">Register</string>
    <string name="sign_in_req">sign in</string>
    <string name="login_cred_req">Enter Email or Password</string>
    <string name="sign_out_confirm">sign out</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="no_frnds">You do not have any friends for now</string>
    <string name="create_group">Create a group</string>
    <string name="grp_title">Enter group title</string>
    <string name="grp_des">Enter group description</string>
    <string name="yourself">With Yourself and :</string>
    <string name="names_req">Enter Names</string>
    <string name="paidBy">Paid By</string>

</resources>
